--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* common styles */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -7,6 +9,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+/* main styles */
 header,
 main {
     margin: 50px 100px;
@@ -55,6 +58,7 @@ hr {
     background-color: #B9B9B9;
 }
 
+/* header styles */
 #header-container {
     display: flex;
     background-color: #161616;
@@ -62,11 +66,6 @@ hr {
     height: 100%;
     border-radius: 25px;
     margin-bottom: 20px;
-}
-
-#blogs-container,
-#match-container {
-    display: flex;
 }
 
 .header-text {
@@ -109,6 +108,12 @@ hr {
 .primary-btn:hover {
     background-color: #e7d805;
     color: black;
+}
+
+/* blogs and upcoming match styles */
+#blogs-container,
+#match-container {
+    display: flex;
 }
 
 .blogs,
@@ -173,6 +178,14 @@ nav ul li a {
     color: #161616;
 }
 
+.transfer {
+    padding: 3px 15px;
+    border-radius: 5px;
+    border: 1px black solid;
+}
+
+/* link highlight */
+
 #highlight {
     background-color: #DD0000;
 }
@@ -181,12 +194,7 @@ nav ul li a {
     color: #ffffff;
 }
 
-.transfer {
-    padding: 3px 15px;
-    border-radius: 5px;
-    border: 1px black solid;
-}
-
+/* upcoming match styles */
 .match-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -197,17 +205,6 @@ nav ul li a {
 
 .match-flag {
     display: flex;
-}
-
-.tablet {
-    text-align: center;
-    visibility: hidden;
-}
-
-.fa-brands {
-    font-size: 40px;
-    padding: 15px;
-    color: white;
 }
 
 .flag {
@@ -231,6 +228,19 @@ nav ul li a {
 .match-info p {
     font-size: 20px;
     color: #585555;
+}
+
+/* style for tablet */
+.tablet {
+    text-align: center;
+    visibility: hidden;
+}
+
+/* social icons style */
+.fa-brands {
+    font-size: 40px;
+    padding: 15px;
+    color: white;
 }
 
 /* smaller screen */
